2003-11-05  Moritz Balz  <verteiler@mbalz.de>

	* gdk/Window.custom : System.Drawing.Rectangle/Point customizations

2003-11-05  Mike Kestner  <mkestner@ximian.com>

	* gtk/TreeNodeAttribute.cs : sealed per Ben Maurer's suggestion.
	* gtk/TreeNodeValueAttribute.cs : ditto

2003-11-04  Mike Kestner  <mkestner@ximian.com>

	* glib/Value.cs : add set to Val prop
	* glue/Makefile.am : build nodestore.c
	* glue/makefile.win32 : link nodestore.o
	* glue/nodestore.c : new, glue for TreeModel implementation
	* gtk/NodeStore.cs : new tree store implementation
	* gtk/ITreeNode.cs : new interface for nodestore node types
	* gtk/TreeNode.cs : abstract class for deriving nodestore nodes
	* gtk/TreeNodeAttribute.cs : tree node marking attr
	* gtk/TreeNodeValueAttribute.cs : node column marking attr
	* gtk/TreeView.custom : add ctor(NodeStore)

2003-11-04  John Luke  <jluke@cfl.rr.com>

	* sources/makefile: add gstreamer 0.6.4 sources
	* sources/gstreamer-parse.patch: fixes to parse gst
	* gst/Gst.metadata: new metadata
	* gst/Makefile.in: add gapi-fixup to Makefile
	* gst/gst-api.xml: new api file for 0.6.4

	* gtk/Gtk.metadata: set correct preferred constructor for button
	* gtk/gtk-api.xml: regenerated
	
2003-11-02  Mike Kestner  <mkestner@ximian.com>

	* generator/CallbackGen.cs : use a temporary ret value if there
	is any cleanup to be done after the call.  Thanks to John Luke
	for a patch which identified the problem.

2003-11-01  Radek Doulik  <rodo@ximian.com>

	* gtk/TreeModelSort.custom: implementation of GetValue/SetValue
	(copied from TreeStore.custom)

	* gtk/TreeModel.custom: added GetValue/SetValue

2003-10-30  Ken Foster  <kenfoster@tampabay.rr.com>    

	* glue/button.c: initial creating of glue file for GdkButton    
	* glue/Makefile.am: added button.c to glue make    
	* glue/makefile.win32: added button.c to win32 glue make    
	* gtk/Button.custom: expose in_button GdkButton member

2003-10-29  Martin Willemoes Hansen  <mwh@sysrq.dk>
