@@ -1,3 +1,9 @@
+2003-11-05  Mike Kestner  <mkestner@ximian.com>
+
+	* gtk/ITreeNode.cs : make Parent readonly
+	* gtk/TreeNode.cs : use an internal method to set parent on the
+	child, and set child.Parent to null in RemoveChild.
+
 2003-11-05  Moritz Balz  <verteiler@mbalz.de>
 
 	* gdk/Window.custom : System.Drawing.Rectangle/Point customizations
